ML Model to predict delay

--- a/Supply.ipynb
+++ b/Supply.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,46 @@
     "delay_summary = df.groupby('Route')['delay_days'].agg(['mean', 'std', 'count']).reset_index()\n",
     "carrier_delay = df.groupby('supplier_id')['delay_days'].mean().sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Score: 0.8662386852346627\n",
+      "RMSE: 1.4885299086441581\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 6: Modeling (Random Forest)\n",
+    "model_df = df[['delay_days', 'risk_classification', 'supplier_id', 'product_id', 'historical_demand']].dropna()\n",
+    "le = LabelEncoder()\n",
+    "for col in ['risk_classification', 'supplier_id', 'product_id']:\n",
+    "    model_df[col] = le.fit_transform(model_df[col])\n",
+    "\n",
+    "X = model_df.drop('delay_days', axis=1)\n",
+    "y = model_df['delay_days']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "rf = RandomForestRegressor(n_estimators=30, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "print(\"R² Score:\", r2_score(y_test, y_pred))\n",
+    "print(\"RMSE:\", np.sqrt(mean_squared_error(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
