--- a/Supply.ipynb
+++ b/Supply.ipynb
@@ -196,10 +196,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 Top 10 Suppliers by SLA Breach Rate:\n",
+      "supplier_id\n",
+      "P0832_S2    0.727273\n",
+      "P0832_S3    0.727273\n",
+      "P0832_S4    0.727273\n",
+      "P0832_S1    0.727273\n",
+      "P0133_S1    0.666667\n",
+      "P0133_S2    0.666667\n",
+      "P0442_S2    0.633333\n",
+      "P0442_S3    0.633333\n",
+      "P0442_S4    0.633333\n",
+      "P0442_S5    0.633333\n",
+      "Name: SLA_Breached, dtype: float64\n",
+      "\n",
+      "⚠️ SLA Breach Rate by Risk Classification:\n",
+      "risk_classification\n",
+      "Moderate Risk    0.374684\n",
+      "High Risk        0.374419\n",
+      "Low Risk         0.365796\n",
+      "Name: SLA_Breached, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Root Cause SLA Analysis\n",
+    "\n",
+    "# Generate SLA_Breached column (if not already done)\n",
+    "sla_threshold = 7\n",
+    "df['SLA_Breached'] = df['delay_days'] > sla_threshold\n",
+    "\n",
+    "#Group by Supplier ID — Top 10 suppliers with highest SLA breach rates\n",
+    "sla_breaches_by_supplier = (\n",
+    "    df.groupby('supplier_id')['SLA_Breached']\n",
+    "    .mean()\n",
+    "    .sort_values(ascending=False)\n",
+    "    .head(10)\n",
+    ")\n",
+    "\n",
+    "# Group by Risk Classification\n",
+    "sla_breaches_by_risk = (\n",
+    "    df.groupby('risk_classification')['SLA_Breached']\n",
+    "    .mean()\n",
+    "    .sort_values(ascending=False)\n",
+    ")\n",
+    "\n",
+    "#Results\n",
+    "print(\"🔧 Top 10 Suppliers by SLA Breach Rate:\")\n",
+    "print(sla_breaches_by_supplier)\n",
+    "\n",
+    "print(\"\\n⚠️ SLA Breach Rate by Risk Classification:\")\n",
+    "print(sla_breaches_by_risk)\n"
+   ]
   },
   {
    "cell_type": "code",
